[package]
name = "xtra"
version = "0.5.0-beta.6"
description = "A tiny actor framework"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/Restioson/xtra"
documentation = "https://docs.rs/xtra"
readme = "README.md"
keywords = ["async", "actor", "futures", "xtra", "async-await"]
categories = ["asynchronous", "concurrency"]

[dependencies]
futures-sink = { version = "0.3.5", default-features = false }
futures-core = { version = "0.3.5", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.5", default-features = false }
async-trait = "0.1.36"
pollster = "0.2"
catty = "0.1.2"
barrage = "0.2.1"

flume = { git = "https://github.com/Restioson/flume", branch = "into_send_async", default-features = false, features = ["async"]}
#flume = { version = "0.9", default-features = false, features = ["async"] }

tokio = { version = "0.2", features = ["rt-core", "time"], optional = true }
smol = { version = "1", optional = true }
async-std = { version = "1", features = ["unstable"], optional = true}

# Wasm-bindgen support
wasm-bindgen = { version = "0.2", optional = true, default-features = false }
wasm-bindgen-futures = { version = "0.4", optional = true, default-features = false }
futures-timer = { version = "3", optional = true, default-features = false }

[dev-dependencies]
smol = "1"
tokio = { version = "0.2", features = ["macros"] }
rand = "0.7"

[features]
default = ["timing"]
timing = ["futures-timer"]
with-tokio-0_2 = ["tokio"]
with-async_std-1 = ["async-std"]
with-wasm_bindgen-0_2 = ["wasm-bindgen", "wasm-bindgen-futures"]
with-smol-1 = ["smol"]

[[example]]
name = "basic_tokio"
path = "examples/basic_tokio.rs"
required-features = ["with-tokio-0_2", "tokio/full"]

[[example]]
name = "basic_async_std"
path = "examples/basic_async_std.rs"
required-features = ["with-async_std-1", "async-std/attributes"]

[[example]]
name = "basic_smol"
path = "examples/basic_smol.rs"
required-features = ["with-smol-1"]

[[example]]
name = "interleaved_messages"
path = "examples/interleaved_messages.rs"
required-features = ["with-smol-1"]

[[example]]
name = "message_stealing"
path = "examples/message_stealing.rs"
required-features = ["with-smol-1"]

[[example]]
name = "crude_bench"
path = "examples/crude_bench.rs"
required-features = ["with-tokio-0_2", "tokio/full"]

[workspace]
members = ["examples/basic_wasm_bindgen"]

[package.metadata.docs.rs]
features = ["with-tokio-0_2", "with-async_std-1", "with-smol-1", "with-wasm_bindgen-0_2"]
