[package]
name = "xtra"
version = "0.6.0"
description = "A tiny actor framework"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/Restioson/xtra"
documentation = "https://docs.rs/xtra"
readme = "README.md"
keywords = ["async", "actor", "futures", "xtra", "async-await"]
categories = ["asynchronous", "concurrency"]

[dependencies]
async-trait = "0.1.36"
barrage = "0.2.1"
catty = "0.1.4"
flume = { version = "0.10.1", default-features = false, features = ["async"] }
futures-core = { version = "0.3.5", default-features = false, features = ["alloc"] }
futures-sink = { version = "0.3.5", default-features = false }
futures-util = { version = "0.3.5", default-features = false, features = ["sink"] }
pollster = "0.2"

# Feature `timing`
futures-timer = { version = "3.0", optional = true, default-features = false }

# Feature `with-async_std-1`
async-std = { version = "1.0", features = ["unstable"], optional = true }

# Feature `with-smol-1`
smol = { version = "1.1", optional = true }

# Feature `with-tokio-1`
tokio = { version = "1.0", features = ["rt", "time"], optional = true }

# Feature `with-wasm_bindgen-0_2`
wasm-bindgen = { version = "0.2", optional = true, default-features = false }
wasm-bindgen-futures = { version = "0.4", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8"
smol = "1.1"
smol-potat = "1.1"
waker-fn = "1.1"

[features]
default = ["timing"]
timing = ["futures-timer"]
with-async_std-1 = ["async-std"]
with-smol-1 = ["smol"]
with-tokio-1 = ["tokio"]
with-wasm_bindgen-0_2 = ["wasm-bindgen", "wasm-bindgen-futures"]

[[example]]
name = "basic_tokio"
required-features = ["with-tokio-1", "tokio/full"]

[[example]]
name = "basic_async_std"
required-features = ["with-async_std-1", "async-std/attributes"]

[[example]]
name = "basic_smol"
path = "examples/basic_smol.rs"
required-features = ["with-smol-1"]

[[example]]
name = "interleaved_messages"
required-features = ["with-smol-1"]

[[example]]
name = "message_stealing"
required-features = ["with-smol-1"]

[[example]]
name = "crude_bench"
required-features = ["with-tokio-1", "tokio/full"]

[[example]]
name = "global_spawner_ext"
required-features = ["with-smol-1"]

[[test]]
name = "basic"
required-features = ["with-smol-1"]

[workspace]
members = ["examples/basic_wasm_bindgen"]

[package.metadata.docs.rs]
features = ["with-async_std-1", "with-smol-1", "with-tokio-1", "with-wasm_bindgen-0_2"]
