[package]
name = "xtra-macros"
version = "0.6.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/Restioson/xtra"
description = "Helper macros for the xtra crate"
documentation = "https://docs.rs/xtra-macros"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
