[package]
name = "basic-wasm-bindgen"
version = "0.1.0"
authors = ["stoically <stoically@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.13"
xtra = { path = "../..", features = ["with-wasm_bindgen-0_2"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
