[package]
name = "basic-wasm-bindgen"
version = "0.1.0"
authors = ["stoically <stoically@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.63", default-features = false }
wasm-bindgen-futures = { version = "0.4.13", default-features = false }
xtra = { path = "../..", features = ["with-wasm_bindgen-0_2"] }
async-trait = "0.1"

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.13", default-features = false }
